Fix display cart item & use some gap

--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -3,6 +3,11 @@ body {
   background-color: #f7f7f7;
   padding: 20px;
 }
+.items-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
 .cart-item {
   display: flex;
